force-app/main/default/objects/OPP_Notification__c.object
<CustomObject>
    <fields>
        <fullName>ApiID__c</fullName>
        <label>Api ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationName__c</fullName>
        <label>ApplicationName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>OPP_Application__c</referenceTo>
        <relationshipLabel>OPP Notification</relationshipLabel>
        <relationshipName>OPP_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_owner__c</fullName>
        <formula>User__r.Username =  $User.Username</formula>
        <label>Check owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>Top Space Notifications</relationshipLabel>
        <relationshipName>Top_Space_Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Action</fullName>
                    <default>true</default>
                    <label>Action</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MOC_Subject__c</fullName>
        <formula>E_MOC_Application__r.E_MOC_Title__c</formula>
        <label>MOC Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOC_Type__c</fullName>
        <formula>IF(
    E_MOC_Application__r.Normal__c = True,
    &quot;Normal&quot;,
    IF(E_MOC_Application__r.Emergency__c = True,
    &quot;Emergency&quot;,&quot;&quot;))</formula>
        <label>MOC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceID__c</fullName>
        <label>ReferenceID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Reassigned</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Send back</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step__c</fullName>
        <label>Step</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OPP_Notification</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Top Space Notifications</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>ApplicationName__c</columns>
        <columns>Status__c</columns>
        <columns>URL__c</columns>
        <columns>User__c</columns>
        <columns>E_MOC_Application__c</columns>
        <columns>Subject__c</columns>
        <columns>ReferenceID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Requester__c</columns>
        <columns>UserName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Task_EMOC</fullName>
        <columns>E_MOC_Application__c</columns>
        <columns>MOC_Type__c</columns>
        <columns>MOC_Subject__c</columns>
        <columns>Subject__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>contains</operation>
            <value>MOC</value>
        </filters>
        <filters>
            <field>Check_owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My Task EMOC</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Notification Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>